pod-security-114/baseline/disallow-privileged-containers/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
