pod-security-114/baseline/disallow-privileged-containers/e2e/remediation-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-disallow-privileged-containers
spec:
  validationFailureAction: Audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
